<resources>
    <string name="app_name">Layouts SDM</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="receber_notificaes">Receber Notificações</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="adicionar_telefone">Adicionar Telefone</string>
    <string name="adicionar_email">Adicionar Email</string>
    <string-array name="tipoTelefone">
        <item>Fixo</item>
        <item>Celular</item>
    </string-array>
</resources>
