<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nomeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <LinearLayout
            android:id="@+id/foneLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/addFoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="adicionarTelefone"
            android:text="@string/adicionar_telefone" />

        <LinearLayout
            android:id="@+id/emailLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/addEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="adicionarEmail"
            android:text="@string/adicionar_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/notificacoesCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/receber_notificaes" />

            <RadioGroup
                android:id="@+id/notificacoesRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/emailRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <RadioButton
                    android:id="@+id/foneRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telefone" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/limparButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="limparFormulario"
                android:text="@string/limpar" />

            <Button
                android:id="@+id/salvarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="salvarFormulario"
                android:text="@string/salvar" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>