<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/foneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/foneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/notificacoesCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/receber_notificaes" />

        <RadioGroup
            android:id="@+id/notificacoesRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/emailRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <RadioButton
                android:id="@+id/foneRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/limparButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="limparFormulario"
        android:layout_weight="1"
        android:text="@string/limpar" />

    <Button
        android:id="@+id/salvarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="salvarFormulario"
        android:layout_weight="1"
        android:text="@string/salvar" />
    </LinearLayout>

</LinearLayout>