<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="5">


    <TextView
        android:id="@+id/nomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:layout_row="0"
        android:layout_column="0"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:inputType="textEmailAddress" />


    <TextView
        android:id="@+id/foneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/telefone"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/foneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:inputType="phone" />


    <CheckBox
        android:id="@+id/notificacoesCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/receber_notificaes" />

    <RadioGroup
        android:id="@+id/notificacoesRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="2"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/emailRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <RadioButton
            android:id="@+id/foneRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone" />
    </RadioGroup>

    <Button
        android:id="@+id/limparButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:onClick="limparFormulario"
        android:text="@string/limpar" />

    <Button
        android:id="@+id/salvarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:onClick="salvarFormulario"
        android:layout_columnWeight="1"
        android:text="@string/salvar" />
</GridLayout>